--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,11 @@
 .navbar{
-    display: none;
+  
 }
-
+.navbar-main{
+  padding: 1rem 0;
+  background-color: rgb(44, 44, 44);
+  display: none;
+}
 
 /* xs */
 @media (min-width: 475px){
@@ -22,10 +26,17 @@
     .container{
         max-width: 768px;
     }
+    .navbar-main{
+      display: block;
+      position: fixed;
+      width: 100%;
+      z-index: 999;
+      top: 0;
+    }
     .navbar{
+      color: var(--clr-light);
         display: flex;
         justify-content: space-between;
-        margin-top: 1rem;
     }
     .navbar-wrapper{
         display: flex;
@@ -34,6 +45,7 @@
     }
     .navbar-wrapper a{
         font-size: 1.2rem;
+        color: var(--clr-light);
         font-weight: 500;
         text-decoration: none;
     }
