--- a/src/index.css
+++ b/src/index.css
@@ -118,8 +118,8 @@ strong{
 }
 
 /* 2xl */
-@media (min-width: 1536px){
+/* @media (min-width: 1536px){
   .container{
       max-width: 1536px;
   }
-}
+} */
