--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,9 +1,23 @@
-.footer{
-    display: grid;
-    grid-template-columns: auto auto;
-    text-align: center;
+.footer-main{
     background-color: var(--clr-dark);
+}
+hr{
+    color: var(--clr-light);
+}
+.last{
+    text-align: center;
+    font-size: 0.9rem;
+    color: var(--clr-light);
     padding: 1rem 0;
+}
+.last a {
+    text-decoration: none;
+}
+.footer{
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 0;
+    margin: 0 5rem;
 }
 .footer ul{
     display: flex;
@@ -33,38 +47,38 @@
   /* sm */
   @media (min-width: 640px){
     .footer{
-        display: grid;
-        grid-template-columns: auto auto auto;
+        margin: 0 10rem;
     }
   }
   
   /* md */
   @media (min-width: 768px){
-   
+    .footer{
+        margin: 0 20rem;
+    }
   }
   
     /* lg */
     @media (min-width: 896px){
-      
+        .footer{
+            margin: 0 20rem;
+        }
     }
   
     /* xl */
     @media (min-width: 1024px){
         .footer{
-            display: grid;
-            grid-template-columns: auto auto auto auto;
+            margin: 0 20rem;
         }
     }
     
     /* 2xl */
     @media (min-width: 1280px){
-      
+        .footer{
+            margin: 0 20rem;
+        }
     }
     
-    /* 3xl */
-    @media (min-width: 1536px){
-      
-    }
-    
+
     
   
