--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap');
+
 :root{
   --clr-dark: #070a13;
   --clr-light: #f1f5f9;
@@ -33,12 +35,12 @@
   padding: 0;
   box-sizing: border-box;
   line-height: 1.5;
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  font-family: 'Jost', sans-serif;
+  /* font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif,; */
 }
-/* body{
-  background-color: var(--clr-dark);
-  color: var(--clr-light);
-} */
+body{
+  background-color: #e5e5e5;
+}
 
 button{
   display: inline-block;
