--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -3,12 +3,37 @@
 }
 form{
     border: 2px solid var(--clr-rose);
-    padding: 1rem;
+    border-radius: 10px;
+    padding: 2.5rem;
+    width: 70%;
+    margin: 0 auto;
 }
-label,input,textarea{
+label{
+  font-weight: 500;
+}
+label,input{
     width: 100%;
+    outline: transparent;
+    height: 2.5rem;
+    background-color: #e5e5e5;
 }
-
+textarea{
+  width: 100%;
+  background-color: #e5e5e5;
+  outline: transparent;
+}
+input,textarea{
+  border: 1px solid rgb(113, 113, 113);
+  border-radius: 5px;
+  padding: 1rem;
+}
+#submit{
+  background-color: var(--clr-rose);
+  border: none;
+  cursor: pointer;
+  font-weight: 500;
+  padding: 0;
+}
 /* xs */
 @media (min-width: 475px){
     .container{
@@ -28,6 +53,9 @@ label,input,textarea{
     .container{
         max-width: 768px;
     }
+    .form{
+      margin-top: 9rem;
+  }
   }
   
   /* lg */
